--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+co<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>Number 1 - I'm a class!</p>
-  <div>Number 2 - I'm one ID.</div>
-  <p>Number 3 - I'm a class, but cooler!</p>
-  <div>Number 4 - I'm another ID.</div>
-  <p>Number 5 - I'm a class!</p>
+  <p class="paragraph-v1">Number 1 - I'm a class!</p>
+  <div id="contents-v1">Number 2 - I'm one ID.</div>
+  <p class="paragraph-v1 paragraph-v2">Number 3 - I'm a class, but cooler!</p>
+  <div id="contents-v2">Number 4 - I'm another ID.</div>
+  <p class="paragraph-v1">Number 5 - I'm a class!</p>
 </body>
 </html>
